feat: add mais métodos que manipulam a bst